hphp/hack/test/typecheck/foreach_union_dynamic.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function doit(dynamic $d, bool $p):void {
  if ($p) {
    $d = $p;
  }
  foreach($d as $e) {
  }
}
